--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>BlocitoffBe</title>
+  <title>bEBlocitoff</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-<%= yield %>
+  <div class="container">
+    <!-- <div class="nav nav-tabs">
+      <div><%= link_to "Home", welcome_index_path %></div>
+    </div> -->
+
+    <%= yield %>
+  </div>
+
+<% if user_signed_in? %>
+   Signed in as: <strong><%= current_user.email %></strong> |
+   <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> - <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+ <% else %>
+   <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'  %> -
+   <%= link_to "Sign In", new_user_session_path, :class => 'navbar-link'  %>
+ <% end %>
 
 </body>
 </html>
