--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,9 @@
 <body>
 
   <div class="container">
-    <!-- <div class="nav nav-tabs">
-      <div><%= link_to "Home", welcome_index_path %></div>
-    </div> -->
+    <div class="nav nav-tabs">
+      <div><%= link_to "Home", welcome_index_path %> | <%= link_to "My Account", users_show_path %></div>
+    </div>
 
     <%= yield %>
   </div>
@@ -21,7 +21,7 @@
        Signed in as: <strong><%= current_user.email %></strong> |
        <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> - <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
      <% else %>
-       <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'  %> -
+       <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'  %> |
        <%= link_to "Sign In", new_user_session_path, :class => 'navbar-link'  %>
      <% end %>
  </div>
