--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
   <div class="container">
     <div class="nav nav-tabs">
-      <div><%= link_to "Home", welcome_index_path %> | <%= link_to "My Account", users_show_path %></div>
+      <div><%= link_to "Home", welcome_index_path %> | <%= link_to "My Account", root_path %></div>
     </div>
 
     <%= yield %>
