--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,10 @@
 <h1>Welcome to Blocitoff, <%= @user.email %>!</h1>
-<h3>User Email: <%= @user.email %></h3>
+<div class="user-info">
+  <h3>User Email: <%= @user.email %></h3>
+</div>
+<div class="user-items">
+  <%= render @items %>
+</div>
+<div>
+  <%= render partial: "items/form", locals: {user: @user} %>
+</div>
