BE Blocitoff Create To Do Items & Seed Data

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,6 +3,7 @@
   <h3>User Email: <%= @user.email %></h3>
 </div>
 <div class="user-items">
+  <h2>Your Items</h2>
   <%= render @items %>
 </div>
 <div>
