--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,10 +1,6 @@
 <h2>Create a New Item</h2>
 <%= form_for [user, user.items.new], remote: true do |f| %>
   <div class="form group">
-    <%= f.label :Item %>
-    <%= f.text_field :name, placeholder: "Enter your new item." %>
-  </div>
-  <div class="form group">
-    <%= f.submit "Add", class: "btn btn-success" %>
+    <%= f.text_field :name, placeholder: "Enter your new item." %> <%= f.submit "Add", class: "btn btn-success" %>
   </div>
 <% end %>
