--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,3 +1,3 @@
 <div class="list-group-item">
-  <h3><%= item.name %></h3>
+  <h4><%= item.name %><%= link_to "", user_item_path(current_user, item), method: :delete, remote: true, class: 'glyphicon glyphicon-ok-circle' %></h4>
 </div>
